syntax = "proto3";

package google_flights;

import "nullable.proto";
import "enums.proto";
import "inoutbound.proto";

message Settings {
    int32 three = 3; // maybe 1 = roundtrip, 2 = one way

    DateOptions date_options = 5 [(nullable) = ''];
    FlightClass flight_class = 6; // 1 = economy, 2 = premium economy 
    Passengers passengers = 7;
    optional PriceBounds price_bounds = 8;
    Bags bags = 11;
    InOutBoundSettings inout_bound_settings = 14;


    FlightOnly flights_only = 26 [(nullable) = '0'];
}

message DateOptions {
    int32 month = 1; // 0 = next 6 months
    TripDate trip_date = 2;
}

message Passengers {
    int32 adults = 1;
    int32 children = 2;
    int32 infants_on_lap = 3;
    int32 infants_in_seat = 4;
}

message PriceBounds {
    int32 low = 1 [(nullable) = '0'];
    int32 high = 2;
}

message Bags {
    int32 carry_on_bags = 1;
    int32 two = 2;
}